# AI-Text-Summarizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  config.py  constants.py  docker-compose.yml  exceptions.py  logger.py  mypy.ini  pyproject.toml  summarizer.py  utils.py  validators.py
.github/workflows/: ci.yml
docs/: API.md
src/ai_summarizer/: __init__.py  health.py
src/ai_summarizer/config/: __init__.py  settings.py
src/ai_summarizer/core/: __init__.py  summarizer.py
src/ai_summarizer/utils/: __init__.py  helpers.py  validators.py
tests/: conftest.py  test_utils.py  test_validators.py
